--- a/.github/workflows/luarocks.yml
+++ b/.github/workflows/luarocks.yml
@@ -8,11 +8,11 @@ on:
   workflow_dispatch:
 
 jobs:
-  luarocks-upload:
-    runs-on: ubuntu-22.04
-    steps:
-      - uses: actions/checkout@v3
-      - name: LuaRocks Upload
-        uses: nvim-neorocks/luarocks-tag-release@v5
-        env:
-          LUAROCKS_API_KEY: ${{ secrets.LUAROCKS_API_KEY }}
+  # luarocks-upload:
+  #   runs-on: ubuntu-22.04
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: LuaRocks Upload
+  #       uses: nvim-neorocks/luarocks-tag-release@v5
+  #       env:
+  #         LUAROCKS_API_KEY: ${{ secrets.LUAROCKS_API_KEY }}
