--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 /*
 
-#GH, git
+# GH, git
 !.gitignore
 !.github/
 
@@ -8,6 +8,8 @@
 !LICENSE
 !TODO.md
 
+# Collaborators consistency
+!.editorconfig
 # Nix
 !nix/
 !default.nix
